# foundation-api

./: .gitignore  Cargo.toml  Justfile  QL_V2.md  README.md  flake.nix  rust-toolchain.toml
abstracted/: Cargo.toml
abstracted/src/: lib.rs
abstracted/src/abstracted/: abstract_bluetooth.rs  abstract_enclave.rs  mod.rs
api/: Cargo.toml
api/src/: draft.rs  envelope_wire.rs  lib.rs
api/src/api/: backup.rs  bitcoin.rs  bluetooth_endpoint.rs  discovery.rs  firmware.rs  fx.rs  message.rs  messages.rs  mod.rs  onboarding.rs  pairing.rs  passport.rs  quantum_link.rs  raw.rs  scv.rs  settings.rs  sign.rs  status.rs  tests.rs
api/src/v2/: executor.rs  mod.rs
api/tests/: golden_tests.rs
api/tests/snapshots/: golden_tests__golden_account_update.snap  golden_tests__golden_apply_passphrase_none.snap  golden_tests__golden_apply_passphrase_some.snap  golden_tests__golden_backup_shard_hmac_input.snap  golden_tests__golden_backup_shard_request.snap  golden_tests__golden_backup_shard_response_error.snap  golden_tests__golden_backup_shard_response_success.snap  golden_tests__golden_backup_shard_v0.snap  golden_tests__golden_backup_shard_version_v0.snap  golden_tests__golden_broadcast_transaction.snap  golden_tests__golden_create_magic_backup_event_chunk.snap  golden_tests__golden_create_magic_backup_event_start.snap  golden_tests__golden_create_magic_backup_result_error.snap  golden_tests__golden_create_magic_backup_result_success.snap  golden_tests__golden_device_status.snap  golden_tests__golden_device_status_updating.snap  golden_tests__golden_envoy_magic_backup_enabled_request.snap  golden_tests__golden_envoy_magic_backup_enabled_response.snap  golden_tests__golden_envoy_status.snap  golden_tests__golden_exchange_rate.snap  golden_tests__golden_exchange_rate_history.snap  golden_tests__golden_firmware_fetch_event_chunk.snap  golden_tests__golden_firmware_fetch_event_downloading.snap  golden_tests__golden_firmware_fetch_event_error.snap  golden_tests__golden_firmware_fetch_event_not_available.snap  golden_tests__golden_firmware_fetch_event_starting.snap  golden_tests__golden_firmware_fetch_request.snap  golden_tests__golden_firmware_update_check_request.snap  golden_tests__golden_firmware_update_check_response_available.snap  golden_tests__golden_firmware_update_check_response_not_available.snap  golden_tests__golden_firmware_update_result_error.snap  golden_tests__golden_firmware_update_result_error_install.snap  golden_tests__golden_firmware_update_result_error_verify.snap  golden_tests__golden_firmware_update_result_installing.snap  golden_tests__golden_firmware_update_result_rebooting.snap  golden_tests__golden_firmware_update_result_success.snap  golden_tests__golden_firmware_update_result_update_verified.snap  golden_tests__golden_heartbeat.snap  golden_tests__golden_onboarding_state_completed.snap  golden_tests__golden_onboarding_state_firmware_update_screen.snap  (+23 more)
backup-shard/: Cargo.toml
backup-shard/src/: lib.rs
backup-shard/tests/: golden_tests.rs
backup-shard/tests/snapshots/: golden_tests__golden_backup_shard_hmac_input.snap  golden_tests__golden_backup_shard_hmac_input_v1.snap  golden_tests__golden_backup_shard_v0.snap  golden_tests__golden_backup_shard_v1.snap  golden_tests__golden_backup_shard_version_v0.snap  golden_tests__golden_backup_shard_version_v1.snap
btp/: Cargo.toml
btp/src/: chunk.rs  dechunk.rs  lib.rs  tests.rs
btp/wireshark_dissector/: btp.lua
ql/: Cargo.toml  README.md  ql-v2.presenterm.md
ql-engine/: Cargo.toml
ql-engine/src/: arena.rs  lib.rs
ql-engine/src/engine/: mod.rs  sink.rs  state.rs  stream.rs
ql-engine/src/mux/: mod.rs
ql-engine/src/stream/: internal.rs  mod.rs  ring.rs  state.rs  tests.rs
ql-engine/src/wire/: codec.rs  encrypted_message.rs  id.rs  mod.rs
ql-fsm/: Cargo.toml
ql-fsm/src/: error.rs  fsm.rs  lib.rs  replay_cache.rs  state.rs  tests.rs
ql-fsm/src/handshake/: ik.rs  kk.rs  mod.rs  xx.rs
ql-fsm/src/implementation/: core.rs  fsm.rs  handshake.rs  mod.rs  peer.rs
ql-fsm/src/session/: ack_tracker.rs  internal.rs  mod.rs  range_set.rs  reassembly.rs  received_records.rs  remote_stream_history.rs  ring.rs  state.rs  stream_ops.rs  stream_parity.rs  stream_rx.rs  stream_tx.rs  stream_window.rs  stream_writer.rs  tests.rs  tracked.rs
ql-fsm/src/tests/: handshake.rs  mod.rs  proptest.rs  session.rs
ql-protocol/: Cargo.toml
ql-protocol/src/: cbor.rs  executor.rs  lib.rs  test_identity.rs  wire.rs
ql-protocol/src/ql/: encrypt.rs  handle.rs  mod.rs  router.rs  test.rs
ql-protocol/src/ql2/: encrypt.rs  mod.rs
ql-protocol/src/typed/: handle.rs  mod.rs  router.rs  test.rs
ql-runtime/: Cargo.toml
ql-runtime/src/: chunk_slot.rs  command.rs  driver.rs  error.rs  handle.rs  lib.rs  log.rs  platform.rs
ql-runtime/src/chunk_slot/: mod.rs  queue.rs
ql-runtime/src/driver/: mod.rs  state.rs  test.rs
ql-runtime/src/handle/: mod.rs  reader.rs  writer.rs
ql-runtime/src/io/: inner.rs  mod.rs  queue.rs  reader.rs  shared.rs  slot.rs  sync.rs  writer.rs
ql-runtime/src/rpc/: adapter.rs  download.rs  error.rs  mod.rs  progress.rs  request_with_progress.rs  subscription.rs  upload.rs
ql-runtime/src/tests/: handshake.rs  heartbeat.rs  mod.rs  rpc.rs  session.rs  stream.rs  unpair.rs
ql-wire/: Cargo.toml
ql-wire/src/: bytes.rs  codec.rs  control.rs  crypto.rs  encrypted_message.rs  error.rs  header.rs  id.rs  identity.rs  lib.rs  nonce.rs  pq.rs  record.rs  ref.rs  testing.rs  tests.rs  varint.rs  x25519.rs  xid.rs
ql-wire/src/encrypted/: ack.rs  builder.rs  byte_reassembly.rs  close.rs  mod.rs  ping.rs  route_id.rs  stream.rs  stream_ack.rs  stream_chunk.rs  stream_close.rs  stream_data.rs  stream_id.rs  stream_window.rs  unpair.rs
ql-wire/src/handshake/: crypto.rs  ik.rs  kk.rs  meta.rs  mod.rs  pairing.rs  transport_params.rs  xx.rs
ql/src/: encrypt.rs  handle.rs  id.rs  identity.rs  lib.rs  platform.rs  router.rs  runtime.rs  tests.rs  wire.rs
ql/src/wire/: mod.rs  (+3 more)
ql2/: Cargo.toml  ql-v2.presenterm.md
ql2/src/: handshake.rs  id.rs  identity.rs  lib.rs  platform.rs  router.rs  wire.rs
(+203 files in other folders)
