[workspace]
resolver = "2"
members = [
  "api",
  "backup-shard",
  "btp",
  "quantum-link-macros",
]

[workspace.package]
homepage = "https://github.com/Foundation-Devices/foundation-api"

[workspace.dependencies]
btp = { path = "btp" }
foundation-abstracted = { path = "abstracted" }
foundation-api = { path = "api" }
getrandom = { version = "0.2" }
minicbor = { version = "0.24.2", features = ["alloc", "derive"] }
quantum-link-macros = { path = "quantum-link-macros" }
rkyv = { version = "0.7", default-features = false, features = [
  "size_32",
  "alloc",
] }
[patch.crates-io]
pqcrypto-traits = { git = "https://github.com/Foundation-Devices/pqcrypto", rev = "ebadf71214f67cb970242fa1053b4acb65767737" }
pqcrypto-mldsa = { git = "https://github.com/Foundation-Devices/pqcrypto", rev = "ebadf71214f67cb970242fa1053b4acb65767737" }
pqcrypto-mlkem = { git = "https://github.com/Foundation-Devices/pqcrypto", rev = "ebadf71214f67cb970242fa1053b4acb65767737" }
