[workspace]
resolver = "2"
members = ["api", "backup-shard", "btp", "quantum-link-macros"]

[workspace.package]
homepage = "https://github.com/Foundation-Devices/foundation-api"

[workspace.dependencies]
# blockchain commons
bc-components = { version = "0.28.0" }
bc-envelope = { version = "0.37.0" }
bc-xid = { version = "0.16.0" }
dcbor = { version = "0.23.3" }
gstp = { version = "0.11.0" }

chrono = "0.4"
getrandom = { version = "0.2" }
minicbor = { version = "0.24.2", features = ["alloc", "derive"] }
thiserror = { version = "2" }
rkyv = { version = "0.7", default-features = false, features = [
  "size_32",
  "alloc",
] }

# workspace crates
btp = { path = "btp" }
foundation-api = { path = "api" }
quantum-link-macros = { path = "quantum-link-macros" }


[patch.crates-io]
pqcrypto-traits = { git = "https://github.com/Foundation-Devices/pqcrypto", rev = "ebadf71214f67cb970242fa1053b4acb65767737" }
pqcrypto-mldsa = { git = "https://github.com/Foundation-Devices/pqcrypto", rev = "ebadf71214f67cb970242fa1053b4acb65767737" }
pqcrypto-mlkem = { git = "https://github.com/Foundation-Devices/pqcrypto", rev = "ebadf71214f67cb970242fa1053b4acb65767737" }
