[package]
name = "foundation-abstracted"
version = "0.1.0"
edition = "2021"
description = "Foundation API using Gordian Sealed Transaction Protocol (GSTP)."
authors = ["Wolf McNally, Blockchain Commons, Foundation Devices"]
license = "Proprietary"

[dependencies]
foundation-api = { workspace = true }
bc-components = "^0.13.0"
bc-envelope = { version = "^0.18.2", default-features = false, features = [
    "multithreaded",
    "attachment",
    "compress",
    "encrypt",
    "expression",
    "known_value",
    "proof",
    "recipient",
    "salt",
    "signature",
    "sskr",
    "transaction",
    "types"
]}

anyhow = "^1.0.0"
thiserror = "^1.0.58"
tokio = { version = "1.37.0", features = ["full"]}
hex = "^0.4.3"
nu-ansi-term = "0.50.1"
minicbor = "0.24"
async-trait = "0.1.80"
foundation-ur = { git = "https://github.com/Foundation-Devices/foundation-rs" }
foundation-urtypes = { version = "0.5.0", git = "https://github.com/Foundation-Devices/foundation-rs" }

[dev-dependencies]
indoc = "^2.0.4"
