[package]
name = "foundation-abstracted"
version = "0.1.0"
edition = "2021"
description = "Foundation API using Gordian Sealed Transaction Protocol (GSTP)."
authors = ["Wolf McNally, Blockchain Commons, Foundation Devices"]
license = "Proprietary"

[dependencies]
foundation-api = { workspace = true }
btp = { workspace = true }
gstp = "0.4.0"
bc-components = "0.16.0"
bc-envelope = { version = "0.22.0", default-features = false, features = [
    "multithreaded",
    "attachment",
    "compress",
    "encrypt",
    "expression",
    "known_value",
    "proof",
    "recipient",
    "salt",
    "signature",
    "sskr",
    "types"
]}
bc-xid = "0.4.0"

anyhow = "^1.0.0"
async-trait = "0.1.80"

