[package]
name = "foundation-api"
version = "2.0.0"
edition = "2021"
description = "Foundation API using Gordian Sealed Transaction Protocol (GSTP)."
authors = ["Wolf McNally, Blockchain Commons, Foundation Devices"]
repository = "https://github.com/Foundation-Devices/foundation-api"
readme = "README.md"
license = "Proprietary"

[dependencies]
bc-envelope = { version = "0.23.0", default-features = false, features = [
    "multithreaded",
    "attachment",
    "compress",
    "encrypt",
    "expression",
    "known_value",
    "proof",
    "recipient",
    "salt",
    "signature",
    "sskr",
    "types",
] }

anyhow = "^1.0.0"
minicbor = { workspace = true, features = ["alloc"] }
minicbor-derive = { workspace = true }
bc-xid = "0.5.0"
rkyv = { workspace = true, optional = true }
flutter_rust_bridge = { version = "=2.11.1", optional = true }
quantum-link-macros = { workspace = true }
gstp = "0.5.0"
bc-components = "0.17.0"
dcbor = "0.16.5"
chrono = "0.4"

[features]
keyos = ["rkyv"]
envoy = ["flutter_rust_bridge"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
