[package]
name = "foundation-api"
version = "2.0.0"
edition = "2021"
description = "Foundation API using Gordian Sealed Transaction Protocol (GSTP)."
authors = ["Wolf McNally, Blockchain Commons, Foundation Devices"]
repository = "https://github.com/Foundation-Devices/foundation-api"
readme = "README.md"
license = "Proprietary"

[dependencies]
bc-envelope = { workspace = true }
bc-xid = { workspace = true }
rkyv = { workspace = true, optional = true }
flutter_rust_bridge = { version = "=2.11.1", optional = true }
quantum-link-macros = { workspace = true }
gstp = { workspace = true }
bc-components = { workspace = true }
dcbor = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
oneshot = { version = "0.1.11" }
async-channel = { version = "2.5" }
futures-lite = { version = "2.5" }

[dev-dependencies]
insta = { workspace = true }
tokio = { version = "1", features = ["rt", "time", "macros"] }

[features]
keyos = ["rkyv"]
envoy = ["flutter_rust_bridge"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
