[package]
name = "backup-shard"
version = "0.1.0"
edition = "2024"
homepage.workspace = true

[dependencies]
minicbor = { workspace = true, features = ["std", "derive"] }
zeroize = { version = "1.8.1", default-features = false, features = [
    "zeroize_derive",
] }
rkyv = { workspace = true, optional = true }

[features]
keyos = ["rkyv"]
