[package]
name = "ql-fsm"
version = "0.1.0"
edition = "2021"
description = "Quantum Link synchronous finite state machine"
license = "Proprietary"

[dependencies]
indexmap = "2"
ql-wire = { path = "../ql-wire" }
rkyv = { version = "0.8", default-features = false, features = [
  "std",
  "bytecheck",
  "little_endian",
  "unaligned",
  "pointer_width_32",
] }
thiserror = { version = "2" }

[dev-dependencies]
libcrux-aesgcm = "0.0.7"
sha2 = "0.10"
