[package]
name = "ql-runtime"
version = "0.1.0"
edition = "2021"
description = "Quantum Link runtime"
license = "Proprietary"

[features]
default = []
log = ["dep:log"]
rpc = ["dep:ql-rpc"]

[dependencies]
async-channel = { version = "2.5" }
bytes = "1"
concurrent-queue = { version = "2.5" }
event-listener = "5.4"
futures-lite = { version = "2.5" }
log = { version = "0.4", optional = true }
oneshot = { version = "0.1.11" }
ql-fsm = { path = "../ql-fsm" }
ql-rpc = { path = "../ql-rpc", optional = true }
ql-wire = { path = "../ql-wire" }

[dev-dependencies]
ql-wire = { path = "../ql-wire", features = ["test-utils"] }
tokio = { version = "1.44", features = ["macros", "rt", "time", "sync"] }

[target.'cfg(loom)'.dev-dependencies]
event-listener = { version = "5.4", features = ["loom"] }
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
