[package]
name = "ql2"
version = "0.1.0"
edition = "2021"
description = "Quantum Link handshake prototype"
license = "Proprietary"

[dependencies]
async-channel = { version = "2.5" }
bc-components = { version = "0.28.0", default-features = false, features = ["pqcrypto"] }
dcbor = { version = "0.23.3" }
futures-lite = { version = "2.5" }
thiserror = { version = "2" }
