[package]
name = "ql2"
version = "0.1.0"
edition = "2021"
description = "Quantum Link v2 duplex stream prototype"
license = "Proprietary"

[dependencies]
async-channel = { version = "2.5" }
atomic-waker = { version = "1.1" }
bc-components = { version = "0.28.0", default-features = false, features = [
  "pqcrypto",
] }
chacha20poly1305 = { version = "0.10.1" }
dcbor = { version = "0.23.3" }
futures-lite = { version = "2.5" }
oneshot = { version = "0.1.11" }
piper = { version = "0.2.4" }
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "unaligned", "pointer_width_32"] }
thiserror = { version = "2" }

[dev-dependencies]
tokio = { version = "1.44", features = ["macros", "rt", "time", "sync"] }
